Finalizado o envio de email na criação, alteração e finalização das tasks, também finalizado o relatorio
